// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mounting, shallow and render tests Paragraph tested with Enzyme shallow render should render correctly with no props 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Paragraph-sc-19yhspj-0",
        "isStatic": true,
        "lastClassName": "epjUaG",
        "rules": Array [
          "color:",
          "#404040",
          ";font-family:",
          "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
          ";padding-bottom:",
          "1rem",
          ";margin:0;",
          "
  font-size: 0.9375em;
  line-height: 1.25rem;

  @media (min-width: 20em) {
    font-size: 1em;
    line-height: 1.375rem;
  }
",
          ";",
        ],
      },
      "displayName": "Paragraph",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Paragraph-sc-19yhspj-0",
      "target": "p",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Mounting, shallow and render tests Paragraph tested with Enzyme shallow render should render correctly with text 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Paragraph-sc-19yhspj-0",
        "isStatic": true,
        "lastClassName": "epjUaG",
        "rules": Array [
          "color:",
          "#404040",
          ";font-family:",
          "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
          ";padding-bottom:",
          "1rem",
          ";margin:0;",
          "
  font-size: 0.9375em;
  line-height: 1.25rem;

  @media (min-width: 20em) {
    font-size: 1em;
    line-height: 1.375rem;
  }
",
          ";",
        ],
      },
      "displayName": "Paragraph",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Paragraph-sc-19yhspj-0",
      "target": "p",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  This is text in a paragraph.
</StyledComponent>
`;
